webrtcbin doesn't support mDNS ice candidates from Chrome and Firefox
I see following in logs when try use webrtcbin
with Chrome:
WARN webrtcice gstwebrtcice.c:622:gst_webrtc_ice_add_candidate:<webrtcice0> Could not parse candidate 'a=candidate:11479326 1 udp 2113937151 ddf73fc5-5714-4f7b-a3c6-eebad8e6ec05.local 52363 typ host generation 0 ufrag 2hCC network-cost 999'
on other side, if I set chrome://flags/#enable-webrtc-hide-local-ips-with-mdns
Chrome option to Disabled, all works fine.
Edited by Nirbheek Chauhan